# EasyWand

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README  README.md  README.rst  RGBsetup_profile.txt  bkgdPts.csv  cmake_install.cmake  easyWand.cpp  easyWand.h  exec  groups  outline.txt  project.config  wandpts.csv
Testing/Temporary/: CTestCostData.txt
